syntax = "proto3";

option csharp_namespace = "Parstech.Shop.Shared.Protos";

package parstech;

import "Common.proto";

// FINANCIAL SERVICE DEFINITIONS

// Financial Admin Service for financial administration
service FinancialAdminService {
  // Wallet operations
  rpc GetWalletsPaging (ParameterDto) returns (PagingDto);
  rpc GetUserFilters (EmptyRequest) returns (UserFiltersResponse);
  rpc BlockOrUnblockWallet (BlockWalletRequest) returns (ResponseDto);
  
  // Wallet transactions operations
  rpc GetWalletTransactionsPaging (WalletTransactionParameterDto) returns (PagingDto);
  rpc CreateWalletTransaction (WalletTransactionDto) returns (ResponseDto);
  rpc GetWalletTransactionDetail (TransactionIdRequest) returns (WalletTransactionDto);
  
  // Installment operations
  rpc PayInstallment (TransactionIdRequest) returns (ResponseDto);
  
  // Facility operations
  rpc CreateFacilities (FacilitiesDto) returns (ResponseDto);
  rpc RegisterFacilitiesByExcel (ExcelUploadRequest) returns (ResponseDto);
  rpc ProcessFacilityPaymentsByExcel (ExcelUploadRequest) returns (ResponseDto);
}

// Reports Admin Service for financial reports
service ReportsAdminService {
  // Financial reports operations
  rpc GetUsersForSelectList (EmptyRequest) returns (UsersForSelectListResponse);
  rpc GetTransactionsReport (TransactionParameterDto) returns (WalletTransactionPagingDto);
  rpc GetActiveCreditReport (TransactionParameterDto) returns (WalletTransactionPagingDto);
  rpc GetActiveInstallments (UserIdRequest) returns (WalletTransactionPagingDto);
  rpc GenerateTransactionsExcel (TransactionReportExcelRequest) returns (ExcelResponse);
  rpc GenerateActiveCreditExcel (TransactionReportExcelRequest) returns (ExcelResponse);
}
