syntax = "proto3";

package Shop.Application.DTOs.User;

message UserForSelectList {
    string user_name = 1;
    string? first_name = 2;
    string? last_name = 3;
}
